# tbforge

./: .gitignore  README.md  pyproject.toml
examples/: notebook.ipynb
src/tbforge/: finite.py  hamiltonian.py  hopping.py  lattice.py  params.py  plotter.py  solver.py
